<resources>
    <string name="app_name">측량 촬영</string>
    <string name="connection_title">서버 접속</string>
    <string name="receivePacket">수신</string>
    <string name="send_data">전송</string>
    <string name="getFromGallery">사진 선택</string>
    <string name="getFromCamera">사진 촬영</string>
    <string name="connectToServer">서버 연결</string>
    <string name="point">.</string>
    <string name="ip">ip :</string>
    <string name="port">port :</string>
    <string name="userName">사용자 :</string>
    <string name="description">서버로 전송할 사진</string>
    <string name="new_capture">새로 촬영하기</string>
    <string name="continue_capture">이어서 촬영하기</string>
    <string name="check_history">작업이력 확인하기</string>
    <string name="work_name">작업 이름</string>
    <string name="work_place">작업 위치</string>
    <string name="server_memo_hint">서버로 부터 받은 메모입니다</string>
    <string name="client_memo_hint">메모를 입력해 주세요</string>
    <string name="done">선택완료</string>
    <string name="no_memo">저장된 메모가 없습니다</string>
    <string name="default_port">8080</string>
    <string name="save_memo">메모저장</string>
    <string name="delete_memo">메모삭제</string>
    <string name="first_ip">첫번째아이피</string>
    <string name="task_history_list">작업 이력 목록</string>
    <string name="marker">마커</string>
    <string name="test">테스트</string>
</resources>
